Spacing fix on logo

--- a/src/blocks/app-and-main-menu/_fhi-header.block.scss
+++ b/src/blocks/app-and-main-menu/_fhi-header.block.scss
@@ -63,10 +63,10 @@
             margin-left: unset;
         }
         &__logo {
-            margin-right: $fhi-space-5;
+            margin-right: $fhi-space-3;
         }
         &__project {
-            border-left: 2px solid $fhi-red-1;
+            border-left: 1px solid $fhi-red-1;
             display: inline-block;
             font-size: $fhi-font-size-5;
             line-height: 0.92;
